# frustration_gpu

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  PHASES_ROADMAP.md  QUICKSTART.md  README.md  RELEASING.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: compare.py  pdb_panel.csv  phase5_results.md  run_phase5.py
benchmark/cpu_baseline/: STATUS.md  validation_matrix.md
benchmark/cpu_baseline/configurational/: panel_10_summary.csv
docs/: API.md  audit_a_energy_vs_cpp.md  audit_b_decoy_emit_vs_cpp.md  awsem_hamiltonian_spec.md  cite_audit.md  frustrapy_api_coverage.md  frustrapy_vs_us.md  lammps_awsem_term_spec.md  lammps_compat_fixes.md  modeller_preprocessing_spec.md  optimization_opportunities.md  optimization_sprint_results.md  phase_2a_review.md  phase_2b_review.md  phase_2c_review.md  phase_3a_review.md  phase_3b_review.md  phase_3c_review.md  phase_4_review.md  phase_5_review.md  precision_upgrade_plan.md  qa1_core_math.md  qa2_decoys.md  qa3_orchestrator.md  qa4_tests.md  qa5_docs.md  sparse_contacts_impl.md  speed1_mutational.md  speed2_config_sr.md  speed3_memory_fusion.md  speed_fix4_results.md  v2_fix_decoys.md  v2_fix_docs.md  v2_fix_energy.md  v2_fix_misc.md  v2_fix_orchestrator.md  v2_fix_parser.md  v2_review_final.md  verify_api.md  verify_config.md  (+3 more)
examples/: 01_basic.py  02_three_modes.py  03_dh_electrostatics.py  04_chain_filter.py  05_gpu_vs_cpu.py  06_batch.py  07_frustrapy_drop_in.py
frustration_gpu/: __init__.py  _contact_common.py  burial.py  compute_frustration.py  contact_gamma.py  debye_huckel.py  decoys.py  density.py  direct_contact.py  frustration.py  mutational_decoys.py  parameters.py  parser.py  singleresidue_decoys.py  virtual_atoms.py  water_mediated.py
tests/: _paths.py  conftest.py  test_api_docs.py  test_burial.py  test_compute_frustration.py  test_coverage_gaps.py  test_debye_huckel.py  test_decoy_validation.py  test_decoys.py  test_density.py  test_direct_contact.py  test_energy_validation.py  test_examples_smoke.py  test_frustration.py  test_misc_validation.py  test_mutational_mode.py  test_orchestrator_validation.py  test_parser_edge_cases.py  test_singleresidue_mode.py  test_water_mediated.py
